welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:7: error: ';' expected but '(' found.
gauche()
      ^